src/test/ui/parser/issue-14303-enum.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-enum.rs:1:15
   |
LL | enum X<'a, T, 'b> {
   |       --------^^- help: reorder the parameters: `<'a, 'b, T>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: aborting due to previous error

